--- a/index.html
+++ b/index.html
@@ -33,10 +33,60 @@
                         <p class="white-normal-13">Área do Cliente</p>
                         </a>
                 </button>
+
             </div>
 
         </div>
     </div>
+
+
+    <header class="header">
+        <a href="/" class="link-logo"><img src="/img/logo.png" alt="" width="300px"></a>
+
+        <nav class="header-nav">
+            <ul>
+
+                <li class="dropdown">
+                    <a href="/" class="white-normal-18 dropbtn">Internet
+                    <span class="material-symbols-outlined dropbtn">expand_more</span>
+                    </a>
+
+                    <div class="dropdown-content">
+                        <a href="#" class="white-normal-13">Dedicada</a>
+                        <span class="separador"></span>
+                        <a href="#" class="white-normal-13">Wi-fi</a>
+                        <span class="separador"></span>
+                        <a href="#" class="white-normal-13">Banda Larga</a>
+                      </div>
+                </li>
+
+                <li>
+                    <a href="/" class="white-normal-18">Telefonia
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/" class="white-normal-18">Plano Móvel
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/" class="white-normal-18">Outros
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="" class="white-normal-18">Contato</a>
+                </li>
+
+
+            </ul>
+        </nav>
+    </header>
+
 </body>
 
 
