--- a/index.html
+++ b/index.html
@@ -122,8 +122,22 @@
             <h1 class="noto-green-normal-60">OUTRO MUNDO</h1>
         </div>
 
-
+        <div class="main-container-imgs">
         <img src="/img/main.png" alt="" class="img-main">
+
+            <div class="imgs-content">
+                <h2 class="bl-normal-40">INTERNET PARA</h2>
+                <h1 class="bl-normal-60">EMPRESAS</h1>
+            </div>
+
+            <div class="imgs-contenet-p">
+                <p class="black-normal-30">Conheça nossos <span class="noto-normal-green-30">principais</span><br>
+                links dedicados de internet<br>
+                visando sempre a melhor<br>
+                <span class="noto-normal-green-30">experiência</span> de até <span class="noto-normal-green-30">10GPs</span></p>
+            </div>
+
+        </div>
 
       </main>
       
