--- a/index.html
+++ b/index.html
@@ -122,24 +122,20 @@
             <h1 class="noto-green-normal-60">OUTRO MUNDO</h1>
         </div>
 
-        <div class="main-container-imgs">
-        <img src="/img/main.png" alt="" class="img-main">
+        <img src="/img/main-imgs.png" alt="" class="img-main">
 
-            <div class="imgs-content">
-                <h2 class="bl-normal-40">INTERNET PARA</h2>
-                <h1 class="bl-normal-60">EMPRESAS</h1>
-            </div>
-
-            <div class="imgs-contenet-p">
-                <p class="black-normal-30">Conheça nossos <span class="noto-normal-green-30">principais</span><br>
-                links dedicados de internet<br>
-                visando sempre a melhor<br>
-                <span class="noto-normal-green-30">experiência</span> de até <span class="noto-normal-green-30">10GPs</span></p>
-            </div>
-
-        </div>
+        <a href="/" class="a-button"><button class="white-normal-18 internet-button">SAIBA MAIS</button></a>
 
       </main>
+
+      <section class="moveis-sec">
+
+        <div class="moveis-title">
+            <h2 class="noto-blue-normal-40">CONHEÇA NOSSOS</h2>
+            <h1 class="noto-red-normal-60">PLANOS MÓVEIS</h1>
+        </div>
+
+      </section>
       
     
 
