--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header class="header">
-        <a href="/" class="link-logo"><img src="/img/logo.png" alt="" width="190px"></a>
-        <img src="/img/logo-hdr.png" alt="" class="mobile-logo" width="190px">
+        <a href="/" class="link-logo"><img src="img/logo.png" alt="" width="190px"></a>
+        <img src="img/logo-hdr.png" alt="" class="mobile-logo" width="190px">
 
 
         <nav class="header-nav">
@@ -103,9 +103,9 @@
     
     <div class="carousel-container">
         <div class="carousel">
-          <div class="carousel-item"><img src="/img/c1.png" alt="Imagem 1"></div>
-          <div class="carousel-item"><img src="/img/c2.png" alt="Imagem 2"></div>
-          <div class="carousel-item"><img src="/img/c3.png" alt="Imagem 3"></div>
+          <div class="carousel-item"><img src="img/c1.png" alt="Imagem 1"></div>
+          <div class="carousel-item"><img src="img/c2.png" alt="Imagem 2"></div>
+          <div class="carousel-item"><img src="img/c3.png" alt="Imagem 3"></div>
         </div>
         <button class="carousel-button carousel-button-prev"><span class="material-symbols-outlined">
             arrow_back_ios
@@ -122,7 +122,7 @@
             <h1 class="noto-green-normal-60">OUTRO MUNDO</h1>
         </div>
 
-        <img src="/img/main-imgs.png" alt="" class="img-main">
+        <img src="img/main-imgs.png" alt="" class="img-main">
 
       </main>
 
@@ -132,7 +132,7 @@
             <h1 class="noto-blue-normal-60">PLANOS MÓVEIS</h1>
         </div>
 
-    <section>
+    <section class="movel-index">
 
         <div class="movel-icons-container">
             <div class="movel-icons">
@@ -143,28 +143,28 @@
             <span class="movel-lines"></span>
 
             <div class="movel-icons">
-                <img src="/icons/2.svg" alt="">
+                <img src="icons/2.svg" alt="">
                 <p class="black-normal-18">Maior rede móvel do Brasil</p>
             </div class="movel-icons">
 
             <span class="movel-lines"></span>
 
             <div class="movel-icons">
-                <img src="/icons/3.svg" alt="">
+                <img src="icons/3.svg" alt="">
                 <p class="black-normal-18">Atendimento Prioritário</p>
             </div>
 
             <span class="movel-lines"></span>
         
             <div class="movel-icons">
-                <img src="/icons/4.svg" alt="">
+                <img src="icons/4.svg" alt="">
                 <p class="black-normal-18">Portabilidade Gratuita</p>
             </div>
 
             <span class="movel-lines"></span>
 
             <div class="movel-icons">
-                <img src="/icons/5.svg" alt="">
+                <img src="icons/5.svg" alt="">
                 <p class="black-normal-18">Receba em casa</p>
             </div>
 
@@ -172,6 +172,7 @@
 
         </div>
 
+        <img src="img/planos.png" alt="" class="movel-index-img">
 
     </section>
 
@@ -180,7 +181,7 @@
 
         <div class="footer-head">
 
-            <img src="/img/logo-hdr.png" alt="Logo" class="footer-img">
+            <img src="img/logo-hdr.png" alt="Logo" class="footer-img">
 
             <div class="footer-head-content">
                 <p class="white-normal-21">Inicio</p>
@@ -197,7 +198,7 @@
 
     </footer>
 
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
 
 </body>
 
