--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <nav class="header-nav">
-            <ul>
+            <ul id="btnLista">
 
                 <li class="dropdown">
                     <a href="/" class="white-normal-15 dropbtn">Internet
@@ -96,7 +96,7 @@
             </ul>
         </nav>
 
-        <span class="material-symbols-outlined menu">
+        <span class="material-symbols-outlined menu" id="btnMobile">
             menu
             </span>
     </header>
@@ -136,7 +136,7 @@
 
         <div class="movel-icons-container">
             <div class="movel-icons">
-                <img src="/icons/1.svg" alt="">
+                <img src="icons/1.svg" alt="">
                 <p class="black-normal-18">Planos Customizados</p>
             </div>
 
@@ -172,7 +172,7 @@
 
         </div>
 
-        <img src="img/planos.png" alt="" class="movel-index-img">
+        <!-- <img src="img/planos.png" alt="" class="movel-index-img" width="760px"> -->
 
     </section>
 
