--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <a href="/" class="link-logo"><img src="img/logo.png" alt="" width="190px"></a>
         <img src="img/logo-hdr.png" alt="" class="mobile-logo" width="190px">
 
-
+         <!-- MENU SEM RESPONSIVO -->
         <nav class="header-nav">
             <ul id="btnLista">
 
@@ -95,10 +96,12 @@
 
             </ul>
         </nav>
+        <!-- MENU SEM RESPONSIVO -->
 
         <span class="material-symbols-outlined menu" id="btnMobile">
             menu
             </span>
+        <ul class="nav-mobile">
     </header>
     
     <div class="carousel-container">
@@ -172,9 +175,34 @@
 
         </div>
 
-        <!-- <img src="img/planos.png" alt="" class="movel-index-img" width="760px"> -->
+        <img src="img/planos.png" alt="" class="movel-index-img" width="760px">
 
     </section>
+
+
+    <div class="sec-index-moveis">
+        <h2 class="noto-red-normal-40">PRESENÇA EM TODO</h2>
+        <h1 class="noto-blue-normal-60">RIO DE JANEIRO</h1>
+    </div>
+
+
+    <section class="map">
+        <img src="img/map.png" alt="" class="map-img">
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       
     <footer class="footer">
