--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         </div>
 
-        <!-- <img src="img/planos.png" alt="" class="movel-index-img" width="760px"> -->
+        <img src="img/planos.png" alt="" class="movel-index-img" width="760px">
 
     </section>
 
