--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 
                 <li>
                     <button class="client-area-button">
-                        <a href="" class="client-area">
+                        <a href="login.html" class="client-area">
                             <span class="material-symbols-outlined">person</span>
                             <p class="white-normal-11">Área do Cliente</p>
                             </a>
