--- a/login.html
+++ b/login.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <img src="img/logo-hdr.png" alt="" class="icon-home">
     
+    <a href="index.html"><img src="img/logo-hdr.png" alt="" width="300" class="logo-img" id="logo-img"></a>
+
     <div class="div-princ">
         <h1>Login</h1><br>
         <input type="text" placeholder="Digite o CPF/CNPJ">
@@ -24,5 +25,7 @@
 
         <a href=""><button class="second-button">Cadastre-se</button></a><br>
     </div>
+
+    <script src="loginscrp.js"></script>
 </body>
 </html>
