--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
             
             <div class="contact-box">
                 <p class="black-normal-18">Seu nome</p>
-                <input type="text" placeholder="Digite seu nome" autofocus required class="input-md">
+                <input type="text" placeholder="Digite seu nome" required class="input-md">
             </div>
 
             <div class="contact-box">
                 <p class="black-normal-18">Seu e-mail</p>
-                <input type="email" placeholder="Digite seu e-mail" autofocus required class="input-md">
+                <input type="email" placeholder="Digite seu e-mail" required class="input-md">
             </div>
 
             <div class="contact-box">
                 <p class="black-normal-18">Sua Mensagem</p>
-                <textarea name="Message" class="textarea" autofocus required style="resize: none; padding: 10px" placeholder="Digite sua mensagem"></textarea>
+                <textarea name="Message" class="textarea" required style="resize: none; padding: 10px" placeholder="Digite sua mensagem"></textarea>
             </div>
 
             <div class="contact-button-container">
