--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <a href=""><button>Entrar</button></a><br>
         <span class="line"></span>
 
-        <a href=""><button class="second-button">Cadastre-se</button></a><br>
+        <a href="cadastro.html"><button class="second-button">Cadastre-se</button></a><br>
     </div>
 
     <script src="loginscrp.js"></script>
