--- a/login.html
+++ b/login.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oficial TLogin</title>
-    <link rel="stylesheet" href="css/login.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="css/Login.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+<body class="body-login">
+  <img src="img/background-login.png" alt="" class="backgroung-img" width="1020px">
+  
+  <header>
+    <a href="index.html"><img src="img/logo-white.png" alt="" class="login-logo"/></a>
+  </header>
+  
+  <div class="div-principal">
+    <main class="login-container">
+        <h1 class="login-title">Login</h1>
+        <p class="login-subtitle">
+          Acesse com as suas credenciais
+        </p>
+    </main>
+      
+    <form action="" class="login-formulario">
+        <label for="" class="login-label-items">
+          <span class="material-symbols-outlined">
+            person_4
+            </span>
+          <input
+            type="text"
+            class="input-credenciais"
+            placeholder="Digite seu e-mail ou CPF"
+            required
+            id="login-input"
+          />
+        </label>
 
-<body>
-    
-    <a href="index.html"><img src="img/logo-hdr.png" alt="" width="300" class="logo-img" id="logo-img"></a>
+        <label for="" class="login-label-items">
+          <span class="material-symbols-outlined">
+            lock
+            </span>
+            <input
+              type="password"
+              class="input-credenciais"
+              placeholder="Digite sua senha"
+              required
+              id="passawordLogin"
+            />
+        </label>
+        <button class="button-login"><a href="">Entrar</a></button>
+        <p class="login-label-items forgot-passaword white-normal-13">Esqueceu sua senha?<a href="" class="a-space">Redefinir agora</a></p>
+        <button class="button-cadastro"><a href="cadastro.html">Cadastre-se</a></button>
+        <p class="rights">Telecall © Todos os direitos reservados</p>
+    </form>
+  </div>
 
-    <div class="div-princ">
-        <h1>Login</h1><br>
-        <input type="text" placeholder="Digite o CPF/CNPJ">
-        <br><br>
-        <input type="password" placeholder="Senha" maxlength="14">
-        <br><br>
-        <a href="" class="fgt-pass">Esqueceu sua senha?</a><br><br>
-        <a href=""><button>Entrar</button></a><br>
-        <span class="line"></span>
-
-        <a href="cadastro.html"><button class="second-button">Cadastre-se</button></a><br>
-    </div>
-
-    <script src="loginscrp.js"></script>
+  <script src="javascript/login.js"></script>
 </body>
 </html>
+
