--- a/pag_rede_infra.html
+++ b/pag_rede_infra.html
@@ -69,7 +69,7 @@
 
     <section class="degrade">
         <span>
-            <img src="/img/rede e infraestrutura.png" alt="" class="icone" width="150px">  
+            <img src="img/rede e infraestrutura.png" alt="" class="icone" width="150px">  
             <h1 class="titulos"> Rede e Infraestrutura </h1>
         </span>
         <h2>Soluções de conectividade sob medida para a sua empresa.</h2>
@@ -84,7 +84,7 @@
     
     <section class="flex">
         <div>
-            <img src="/img/ponto-aponto.png" alt="" width="80px" class="icons"> <br>
+            <img src="img/ponto-aponto.png" alt="" width="80px" class="icons"> <br>
             <h3> Ponto-a-Ponto </h3><br>
             <p> Acesso dedicado para ligação entre dois pontos. </p> <br><br>
 
@@ -92,7 +92,7 @@
         </div>
 
         <div>
-            <img src="/img/MPLS.png" alt="" width="80px" class="icons"> <br>
+            <img src="img/MPLS.png" alt="" width="80px" class="icons"> <br>
             <h3> MPLS </h3><br>
             <p> Formação de rede com protocolo MPLS. </p> <br><br><br>
 
@@ -100,7 +100,7 @@
         </div>
 
         <div>
-            <img src="/img/fibra apagada e dutos.png" alt="" width="35%" class="icon">
+            <img src="img/fibra apagada e dutos.png" alt="" width="35%" class="icon">
             <h3> Fibra Apagadas e Dutos </h3><br>
             <p> Locação privada de fibra apagada e dutos.</p> <br><br>
 
@@ -108,7 +108,7 @@
         </div>
 
         <div>
-            <img src="/img/co-locations.png" alt=""  width="80px" class="icons"> <br>
+            <img src="img/co-locations.png" alt=""  width="80px" class="icons"> <br>
             <h3> Co-locations </h3><br>
             <p> Locação de espaço em rack no Data Center da Telecall. </p> <br><br>
 
@@ -124,7 +124,7 @@
 
         <div class="footer-head">
 
-            <img src="/img/logo-hdr.png" alt="Logo" class="footer-img">
+            <img src="img/logo-hdr.png" alt="Logo" class="footer-img">
 
             <div class="footer-head-content">
                 <p class="white-normal-21">Inicio</p>
@@ -139,7 +139,7 @@
 
     </footer>
 
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
     
 </body>
 </html>
