--- a/pagina_internet.html
+++ b/pagina_internet.html
@@ -74,7 +74,7 @@
 
     <section class="degrade">
         <span>
-            <img src="/img/icone_internet.png" alt="" class="icone" width="150px">  
+            <img src="img/icone_internet.png" alt="" class="icone" width="150px">  
             <h1 class="titulos"> Internet </h1>
         </span>
         <h2> Soluções de internet em fibra de altíssima velocidade. </h2>
@@ -89,7 +89,7 @@
     
     <section class="flex">
         <div>
-            <img src="/img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
+            <img src="img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
             <h3> Internet Dedicada </h3><br>
             <p> Internet dedicada de máxima qualidade, disponibilidade e segurança. </p> <br>
 
@@ -97,7 +97,7 @@
         </div>
 
         <div>
-            <img src="/img/icone_internet.png" alt="" width="85px" class="icons">
+            <img src="img/icone_internet.png" alt="" width="85px" class="icons">
             <h3> Banda Larga </h3><br>
             <p> Internet em fibra ótica de alta qualidade e velocidade. </p> <br><br>
 
@@ -105,7 +105,7 @@
         </div>
 
         <div>
-            <img src="/img/icone-Wi-fi.png"  alt="" width="80px" class="icons">
+            <img src="img/icone-Wi-fi.png"  alt="" width="80px" class="icons">
             <h3> Wi-Fi </h3><br>
             <p> Internet sem fio de alta qualidade e velocidade.</p> <br><br>
 
@@ -119,7 +119,7 @@
     <section class="flex2">
 
         <div class="evento">
-            <img src="/img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
+            <img src="img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
             <h3> Link Dedicado Temporário com Wi-fi </h3><br>
             <p> Internet dedicada temporária para eventos de todos os tamanhos. </p> <br><br>
 
@@ -127,7 +127,7 @@
         </div>
 
         <div class="evento">
-            <img src="/img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
+            <img src="img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
             <h3> Hotspot </h3><br>
             <p> Transforme o WIFI da sua empresa em uma ferramenta de marketing e vendas. </p> <br><br>
 
@@ -143,7 +143,7 @@
 
         <div class="footer-head">
 
-            <img src="/img/logo-hdr.png" alt="Logo" class="footer-img">
+            <img src="img/logo-hdr.png" alt="Logo" class="footer-img">
 
             <div class="footer-head-content">
                 <p class="white-normal-21">Inicio</p>
@@ -158,7 +158,7 @@
 
     </footer>
 
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
     
 </body>
 </html>
