--- a/pagina_mobilidade.html
+++ b/pagina_mobilidade.html
@@ -69,7 +69,7 @@
 
     <section class="degrade">
         <span>
-            <img src="/img/mobilidade.png" alt="" class="icone" width="120px">  
+            <img src="img/mobilidade.png" alt="" class="icone" width="120px">  
             <h1 class="titulos"> Mobilidade </h1>
         </span>
         <h2>As melhores soluções em mobilidade para a sua empresa.</h2>
@@ -84,7 +84,7 @@
     
     <section class="flex">
         <div>
-            <img src="/img/mobilidade.png" alt="" width="80px" class="icons"> <br>
+            <img src="img/mobilidade.png" alt="" width="80px" class="icons"> <br>
             <h3> Celular Empresarial </h3><br>
             <p> Monte planos de celular personalizados para a sua empresa. </p> <br><br>
 
@@ -92,7 +92,7 @@
         </div>
 
         <div>
-            <img src="/img/MVNA-E.png" alt="" width="80px" class="icons"> <br>
+            <img src="img/MVNA-E.png" alt="" width="80px" class="icons"> <br>
             <h3> MVNA/E </h3><br>
             <p> Sua empresa operando no mercado móvel com a melhor cobertura do Brasil. </p> <br><br>
 
@@ -109,7 +109,7 @@
 
         <div class="footer-head">
 
-            <img src="/img/logo-hdr.png" alt="Logo" class="footer-img">
+            <img src="img/logo-hdr.png" alt="Logo" class="footer-img">
 
             <div class="footer-head-content">
                 <p class="white-normal-21">Inicio</p>
@@ -124,7 +124,7 @@
 
     </footer>
 
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
     
 </body>
 </html>
