--- a/pagina_telefonia.html
+++ b/pagina_telefonia.html
@@ -69,7 +69,7 @@
 
     <section class="degrade">
         <span>
-            <img src="/img/Telefonia.png" alt="" class="icone" width="150px">  
+            <img src="img/Telefonia.png" alt="" class="icone" width="150px">  
             <h1 class="titulos"> Telefonia </h1>
         </span>
         <h2> Soluções de telefonia inteligentes, inovadoras e integradas. </h2>
@@ -84,7 +84,7 @@
     
     <section class="flex">
         <div>
-            <img src="/img/PABX-IP-Virtual.png" alt="" width="80px" class="icons">
+            <img src="img/PABX-IP-Virtual.png" alt="" width="80px" class="icons">
             <h3> PABX IP Virtual </h3><br>
             <p> Telefonia na nuvem de alta qualidade. </p> <br><br>
 
@@ -92,7 +92,7 @@
         </div>
 
         <div class="e1">
-            <img src="/img/E1-SIP Trunk.png" alt="" width="80px" class="icons">
+            <img src="img/E1-SIP Trunk.png" alt="" width="80px" class="icons">
             <h3> E1 / SIP Trunk </h3><br>
             <p> Soluções de telefonia inteligentes. </p> <br><br>
 
@@ -100,7 +100,7 @@
         </div>
 
         <div class="num0800">
-            <img src="/img/icone-Numeros-0800-e-40XX.png" alt="" width="80px" class="icons">
+            <img src="img/icone-Numeros-0800-e-40XX.png" alt="" width="80px" class="icons">
             <h3> Números 0800 e 40XX </h3><br>
             <p> Números especiais de acordo com a necessidade de sua empresa.</p> <br>
 
@@ -114,7 +114,7 @@
     <section class="flex">
 
         <div>
-            <img src="/img/PABX-IP-Virtual.png" alt="" width="80px" class="icons">
+            <img src="img/PABX-IP-Virtual.png" alt="" width="80px" class="icons">
             <h3> PABX IP Virtual Temporário </h3><br>
             <p> Solução de telefonia na nuvem temporária para eventos. </p> <br><br>
 
@@ -130,7 +130,7 @@
 
         <div class="footer-head">
 
-            <img src="/img/logo-hdr.png" alt="Logo" class="footer-img">
+            <img src="img/logo-hdr.png" alt="Logo" class="footer-img">
 
             <div class="footer-head-content">
                 <p class="white-normal-21">Inicio</p>
@@ -145,7 +145,7 @@
 
     </footer>
 
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
     
 </body>
 </html>
