--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="header-itens">
-                    <a href="#presenca" class="white-normal-15">Outros</a>
+                    <a href="pag_rede_infra.html" class="white-normal-15">Infraestrutura</a>
                 </li>
 
                 <li class="header-itens">
