--- a/pagina_telefonia.html
+++ b/pagina_telefonia.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="header-itens">
-                    <a href="index.html" class="white-normal-15">Outros</a>
+                    <a href="pag_rede_infra.html" class="white-normal-15">Infraestrutura</a>
                 </li>
 
                 <li class="header-itens">
