--- a/login.html
+++ b/login.html
@@ -1,65 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="css/Login.css">
-    <link rel="stylesheet" href="css/fonts.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
-<body class="body-login">
-  <img src="img/background-login.png" alt="" class="backgroung-img" width="1020px">
-  
-  <header>
-    <a href="index.html"><img src="img/logo-white.png" alt="" class="login-logo"/></a>
-  </header>
-  
-  <div class="div-principal">
-    <main class="login-container">
-        <h1 class="login-title">Login</h1>
-        <p class="login-subtitle">
-          Acesse com as suas credenciais
-        </p>
-    </main>
-      
-    <form action="" class="login-formulario">
-        <label for="" class="login-label-items">
-          <span class="material-symbols-outlined">
-            person_4
-            </span>
-          <input
-            type="text"
-            class="input-credenciais"
-            placeholder="Digite seu e-mail ou CPF"
-            required
-            id="login-input"
-          />
-        </label>
+    <link rel="stylesheet" href="css/login.css" />
+    <title>Oficial TeleCall</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <form action="#" class="sign-in-form">
+            <h2 class="title">Entrar</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="E-mail" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Senha" />
+            </div>
+            <input type="submit" value="Login" class="btn solid" />
+          </form>
+          <form action="#" class="sign-up-form">
+            <h2 class="title">Registrar</h2>
+            <div class="input-field">
+              <i class="name-color fas fa-user"></i>
+              <input type="text" placeholder="Nome Completo*" minlength="8" maxlength="60" id="name" required/>
+            </div>
+            <div class="input-field">
+              <i class="cpf-color fas fa-id-card"></i>
+              <input type="text" placeholder="CPF*" id="cpf" minlength="14" maxlength="14" class="corporate-name" required/>
+            </div>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input type="text" name="email" placeholder="Email" onblur="validacaoEmail(email)"  maxlength="60">
+            </div>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input type="email" placeholder="Confirme o Email*" required/>
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Senha*" required/>
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Confirme a Senha*" required/>
+            </div>
+            <input type="submit" class="btn" value="Cadastrar" />
+          </form>
+        </div>
+      </div>
 
-        <label for="" class="login-label-items">
-          <span class="material-symbols-outlined">
-            lock
-            </span>
-            <input
-              type="password"
-              class="input-credenciais"
-              placeholder="Digite sua senha"
-              required
-              id="passawordLogin"
-            />
-        </label>
-        <button class="button-login"><a href="">Entrar</a></button>
-        <p class="login-label-items forgot-passaword white-normal-13">Esqueceu sua senha?<a href="" class="a-space">Redefinir agora</a></p>
-        <button class="button-cadastro"><a href="cadastro.html">Cadastre-se</a></button>
-        <p class="rights">Telecall © Todos os direitos reservados</p>
-    </form>
-  </div>
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <a href="index.html"><img src="img/logo-white.png" alt="" class="logo-img"></a>
+            <h3>Novo por aqui?</h3>
+            <p>
+              Cadastre-se já clicando no botão abaixo. 
+              É rápido e simples.
+            </p>
+            <button class="btn transparent" id="sign-up-btn">Cadastre-se</button>
+          </div>
+          <img src="img/cadastro.svg" class="image" alt="" />
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <a href="index.html"><img src="img/logo-white.png" alt="" class="logo-img"></a>
+            <h3>Já é cadastrado?</h3>
+            <p>
+              Acesse sua conta fácil e rápido clicando no botão abaixo. 
+            </p>
+            <button class="btn transparent" id="sign-in-btn">Logar</button>
+          </div>
+          <img src="img/login.svg" class="image" alt="" />
+        </div>
+      </div>
+    </div>
 
-  <script src="javascript/login.js"></script>
-</body>
+    <script src="javascript/login.js"></script>
+  </body>
 </html>
-
