--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
               <input type="password" name="passwordConfirm" placeholder="Confirme a Senha*" required minlength="8" class="confirmaSenha" onkeyup="validarConfirmaSenha(passwordConfirm)"/>
             </div>
 
-            <input type="submit" class="btn" value="Cadastrar" />
+            <input type="submit" class="btn" value="Cadastrar" onclick="cadastro()"/>
           </form>
         </div>
       </div>
