--- a/pag_rede_infra.html
+++ b/pag_rede_infra.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="header-itens">
-                    <a href="index.html" class="white-normal-15">Contato</a>
+                    <a href="pagina_contato.html" class="white-normal-15">Contato</a>
                 </li>
 
                 <li class="header-itens">
@@ -100,9 +100,9 @@
         </div>
 
         <div>
-            <img src="img/fibra apagada e dutos.png" alt="" width="35%" class="icon">
+            <img src="img/fibra apagada e dutos.png" alt="" width="110px" class="icon">
             <h3> Fibra Apagadas e Dutos </h3><br>
-            <p> Locação privada de fibra apagada e dutos.</p> <br><br>
+            <p> Locação privada de fibra apagada e dutos.</p> <br><br><br>
 
             <button class="botoes"><strong> Saiba Mais </strong></button>
         </div>
