--- a/pagina_internet.html
+++ b/pagina_internet.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="header-itens">
-                    <a href="index.html" class="white-normal-15">Contato</a>
+                    <a href="pagina_contato.html" class="white-normal-15">Contato</a>
                 </li>
 
                 <li class="header-itens">
@@ -65,11 +65,6 @@
             menu
             </span>
 
-    </header>
-
-        <span class="material-symbols-outlined menu">
-            menu
-            </span>
     </header>
 
     <section class="degrade">
@@ -129,7 +124,7 @@
         <div class="evento">
             <img src="img/icone_internet_dedicada.png" alt="" width="80px" class="icons">
             <h3> Hotspot </h3><br>
-            <p> Transforme o WIFI da sua empresa em uma ferramenta de marketing e vendas. </p> <br><br>
+            <p> Transforme o WIFI da sua empresa em uma ferramenta de marketing e vendas. </p> <br>
 
             <button class="botoes"><strong> Saiba Mais </strong></button>
         </div>
