--- a/pagina_mobilidade.html
+++ b/pagina_mobilidade.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="header-itens">
-                    <a href="index.html" class="white-normal-15">Contato</a>
+                    <a href="pagina_contato.html" class="white-normal-15">Contato</a>
                 </li>
 
                 <li class="header-itens">
@@ -86,7 +86,7 @@
         <div>
             <img src="img/mobilidade.png" alt="" width="80px" class="icons"> <br>
             <h3> Celular Empresarial </h3><br>
-            <p> Monte planos de celular personalizados para a sua empresa. </p> <br><br>
+            <p> Monte planos de celular personalizados para a sua empresa. </p> <br><br><br>
 
             <button class="botoes"><strong> Saiba Mais </strong></button>
         </div>
