--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="header-itens">
-                    <a href="#contato" class="white-normal-15">Contato</a>
+                    <a href="pagina_contato.html" class="white-normal-15">Contato</a>
                 </li>
 
                 <li class="header-itens">
